<resources>
    <string name="app_name">MortgageCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Loan Calculator</string>
    <string name="reset">Reset</string>
    <string name="home_value">Home Value</string>
    <string name="down_payment">Down Payment</string>
    <string name="apr">APR</string>
    <string name="terms">Terms (Years)</string>
    <string name="payment_title">Payment</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="total_tax">Total Tax Payed</string>
    <string name="total_interest">Total Interest Payed</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="pay_by">Pay Off Date</string>
    <string name="calc_button">Calculate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
